# PayDrip

./: ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml
contract/contracts/drip-rewards/: Cargo.toml
contract/contracts/drip-rewards/src/: lib.rs  test.rs
contract/contracts/drip-rewards/test_snapshots/test/: test_burn_exceeds_balance.1.json  test_burn_rewards.1.json  test_double_init_panics.1.json  test_rewards_flow.1.json  test_tiered_minting_bronze.1.json  test_tiered_minting_gold.1.json  test_tiered_minting_platinum.1.json  test_tiered_minting_silver.1.json  test_total_supply_tracking.1.json  test_zero_burn_rejected.1.json  test_zero_mint_rejected.1.json
contract/contracts/pay-vault/: Cargo.toml  test_results.txt
contract/contracts/pay-vault/src/: lib.rs  test.rs
contract/contracts/pay-vault/test_snapshots/test/: test_claim_too_early_panics.1.json  test_double_execution_prevented.1.json  test_grace_period_due_soon.1.json  test_guardian_approval.1.json  test_guardian_blocks_without_approval.1.json  test_invalid_state_transition.1.json  test_lock_and_claim_flow.1.json  test_lock_sets_funded_state.1.json  test_locked_balance_query.1.json  test_max_retries_exceeded.1.json  test_past_unlock_time_rejected.1.json  test_payment_lifecycle.1.json  test_payment_state_query.1.json  test_recurring_payment.1.json  test_retry_payment.1.json  test_zero_amount_rejected.1.json
scratch/: check_addr.js
src/: App.jsx  index.css  main.jsx
src/components/: ActivityList.jsx  FeedbackModal.jsx  Layout.jsx  (+7 more)
(+41 files in other folders)
